ini ada perubahan di file index

--- a/index.html
+++ b/index.html
@@ -230,16 +230,16 @@
                 <div class="contact-form-reveral">
                     <h3>Send Massage</h3>
                     <div class="input-box">
-                        <input type="text" name="" value="" placeholder="Name" />
+                        <input type="text" name="#" value="" placeholder="Name" />
                     </div>
                     <div class="input-box">
-                        <input type="text" name="" value="" placeholder="Email" />
+                        <input type="text" name="#" value="" placeholder="Email" />
                     </div>
                     <div class="input-box">
-                        <textarea name="name" id="" cols="80" rows="8" placeholder="Input Your Massage"></textarea>
+                        <textarea name="name" id="#" cols="80" rows="8" placeholder="Input Your Massage"></textarea>
                     </div>
                     <div class="input-box">
-                        <input type="submit" class="send-btn" name="" value="submit" />
+                        <input type="submit" class="send-btn" name="#" value="submit" />
                     </div>
                 </div>
             </div>
